// Vitest Snapshot v1

exports[`Dialog > Dialog confirmVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
    data-v-25064f1a=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
       双按钮 
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
    data-v-25064f1a=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
       带警示按钮 
      
    </span>
  </button>
  <!--teleport start-->
  <div
    class="t-popup"
  >
    <transition-stub
      appear="false"
      css="true"
      name="fade"
      persisted="false"
    >
      <transition-stub
        appear="false"
        css="true"
        name="t-overlay"
        persisted="true"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
      </transition-stub>
    </transition-stub>
    <transition-stub
      appear="false"
      css="true"
      name="fade-zoom"
      persisted="true"
    >
      <div
        class="t-popup--content t-popup--content-center"
        style="display: none;"
      >
        
        <div
          class="t-dialog"
          id="root"
        >
          <div
            class="t-dialog__header t-dialog__header--has-content"
          >
            
            <div
              class="t-dialog__title"
            >
              对话框标题
            </div>
            
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__text"
            >
              告知当前状态、信息和解决方法
            </div>
          </div>
          <div
            class="t-dialog__footer"
          >
            
            <!--v-if-->
            
            
            <button
              aria-disabled="false"
              class="t-button t-size-m t-button--text t-button--default t-button--shape-rectangle t-dialog__btn t-dialog__btn--default t-dialog__horizontal-btn"
              role="button"
            >
              <!---->
              <span
                class="t-button__text"
              >
                取消
              </span>
            </button>
            
            
            <button
              aria-disabled="false"
              class="t-button t-size-m t-button--text t-button--default t-button--shape-rectangle t-dialog__btn t-dialog__btn--primary t-dialog__horizontal-btn"
              role="button"
            >
              <!---->
              <span
                class="t-button__text"
              >
                确认
              </span>
            </button>
            
          </div>
        </div>
        
      </div>
    </transition-stub>
  </div>
  <!--teleport end-->
  <!--teleport start-->
  <div
    class="t-popup"
  >
    <transition-stub
      appear="false"
      css="true"
      name="fade"
      persisted="false"
    >
      <transition-stub
        appear="false"
        css="true"
        name="t-overlay"
        persisted="true"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
      </transition-stub>
    </transition-stub>
    <transition-stub
      appear="false"
      css="true"
      name="fade-zoom"
      persisted="true"
    >
      <div
        class="t-popup--content t-popup--content-center"
        style="display: none;"
      >
        
        <div
          class="t-dialog"
          id="root"
        >
          <div
            class="t-dialog__header t-dialog__header--has-content"
          >
            
            <div
              class="t-dialog__title"
            >
              对话框标题
            </div>
            
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__text"
            >
              告知当前状态、信息和解决方法，等内容。描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很告知当前状态、信息和解决方法，等内容。描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很
            </div>
          </div>
          <div
            class="t-dialog__footer"
          >
            
            <!--v-if-->
            
            
            <button
              aria-disabled="false"
              class="t-button t-size-m t-button--text t-button--default t-button--shape-rectangle t-dialog__btn t-dialog__btn--default t-dialog__horizontal-btn"
              role="button"
            >
              <!---->
              <span
                class="t-button__text"
              >
                取消
              </span>
            </button>
            
            
            <button
              aria-disabled="false"
              class="t-button t-size-m t-button--text t-button--danger t-button--shape-rectangle t-dialog__btn t-dialog__btn--primary t-dialog__horizontal-btn"
              role="button"
            >
              <!---->
              <span
                class="t-button__text"
              >
                警示操作
              </span>
            </button>
            
          </div>
        </div>
        
      </div>
    </transition-stub>
  </div>
  <!--teleport end-->
  
</div>
`;

exports[`Dialog > Dialog feedbackVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
       单行标题 
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
       多行标题最大高度 
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
       带说明文本 
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
       带说明文本最大高度 
      
    </span>
  </button>
  <!-- &lt;t-button block variant="outline" size="large" @click="eventDialog()"&gt; 函数调用长文本对话框 &lt;/t-button&gt; -->
  <!--teleport start-->
  <div
    class="t-popup"
  >
    <transition-stub
      appear="false"
      css="true"
      name="fade"
      persisted="false"
    >
      <transition-stub
        appear="false"
        css="true"
        name="t-overlay"
        persisted="true"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
      </transition-stub>
    </transition-stub>
    <transition-stub
      appear="false"
      css="true"
      name="fade-zoom"
      persisted="true"
    >
      <div
        class="t-popup--content t-popup--content-center"
        style="display: none;"
      >
        
        <div
          class="t-dialog"
          id="root"
        >
          <div
            class="t-dialog__header t-dialog__header--has-content"
          >
            
            <div
              class="t-dialog__title"
            >
              最小高度样式，文案上下居中
            </div>
            
          </div>
          <!--v-if-->
          <div
            class="t-dialog__footer"
          >
            
            <!--v-if-->
            
            
            <!--v-if-->
            
            
            <button
              aria-disabled="false"
              class="t-button t-size-m t-button--text t-button--default t-button--shape-rectangle t-dialog__btn t-dialog__btn--primary t-dialog__horizontal-btn"
              role="button"
            >
              <!---->
              <span
                class="t-button__text"
              >
                知道了
              </span>
            </button>
            
          </div>
        </div>
        
      </div>
    </transition-stub>
  </div>
  <!--teleport end-->
  <!--teleport start-->
  <div
    class="t-popup"
  >
    <transition-stub
      appear="false"
      css="true"
      name="fade"
      persisted="false"
    >
      <transition-stub
        appear="false"
        css="true"
        name="t-overlay"
        persisted="true"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
      </transition-stub>
    </transition-stub>
    <transition-stub
      appear="false"
      css="true"
      name="fade-zoom"
      persisted="true"
    >
      <div
        class="t-popup--content t-popup--content-center"
        style="display: none;"
      >
        
        <div
          class="t-dialog"
          id="root"
        >
          <div
            class="t-dialog__header t-dialog__header--has-content"
          >
            
            <div
              class="t-dialog__title"
            >
              告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内
            </div>
            
          </div>
          <!--v-if-->
          <div
            class="t-dialog__footer"
          >
            
            <!--v-if-->
            
            
            <!--v-if-->
            
            
            <button
              aria-disabled="false"
              class="t-button t-size-m t-button--text t-button--default t-button--shape-rectangle t-dialog__btn t-dialog__btn--primary t-dialog__horizontal-btn"
              role="button"
            >
              <!---->
              <span
                class="t-button__text"
              >
                知道了
              </span>
            </button>
            
          </div>
        </div>
        
      </div>
    </transition-stub>
  </div>
  <!--teleport end-->
  <!--teleport start-->
  <div
    class="t-popup"
  >
    <transition-stub
      appear="false"
      css="true"
      name="fade"
      persisted="false"
    >
      <transition-stub
        appear="false"
        css="true"
        name="t-overlay"
        persisted="true"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
      </transition-stub>
    </transition-stub>
    <transition-stub
      appear="false"
      css="true"
      name="fade-zoom"
      persisted="true"
    >
      <div
        class="t-popup--content t-popup--content-center"
        style="display: none;"
      >
        
        <div
          class="t-dialog"
          id="root"
        >
          <div
            class="t-dialog__header t-dialog__header--has-content"
          >
            
            <div
              class="t-dialog__title"
            >
              对话框标题
            </div>
            
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__text"
            >
              告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内
            </div>
          </div>
          <div
            class="t-dialog__footer"
          >
            
            <!--v-if-->
            
            
            <!--v-if-->
            
            
            <button
              aria-disabled="false"
              class="t-button t-size-m t-button--text t-button--default t-button--shape-rectangle t-dialog__btn t-dialog__btn--primary t-dialog__horizontal-btn"
              role="button"
            >
              <!---->
              <span
                class="t-button__text"
              >
                知道了
              </span>
            </button>
            
          </div>
        </div>
        
      </div>
    </transition-stub>
  </div>
  <!--teleport end-->
  <!--teleport start-->
  <div
    class="t-popup"
  >
    <transition-stub
      appear="false"
      css="true"
      name="fade"
      persisted="false"
    >
      <transition-stub
        appear="false"
        css="true"
        name="t-overlay"
        persisted="true"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
      </transition-stub>
    </transition-stub>
    <transition-stub
      appear="false"
      css="true"
      name="fade-zoom"
      persisted="true"
    >
      <div
        class="t-popup--content t-popup--content-center"
        style="display: none;"
      >
        
        <div
          class="t-dialog"
          id="root"
        >
          <div
            class="t-dialog__header t-dialog__header--has-content"
          >
            
            <div
              class="t-dialog__title"
            >
              对话框标题
            </div>
            
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__text"
            >
              告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内
            </div>
          </div>
          <div
            class="t-dialog__footer"
          >
            
            <!--v-if-->
            
            
            <!--v-if-->
            
            
            <button
              aria-disabled="false"
              class="t-button t-size-m t-button--text t-button--default t-button--shape-rectangle t-dialog__btn t-dialog__btn--primary t-dialog__horizontal-btn"
              role="button"
            >
              <!---->
              <span
                class="t-button__text"
              >
                知道了
              </span>
            </button>
            
          </div>
        </div>
        
      </div>
    </transition-stub>
  </div>
  <!--teleport end-->
  
</div>
`;

exports[`Dialog > Dialog inputVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
    data-v-4a76bf3d=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
       单行标题对话框 
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
    data-v-4a76bf3d=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
       带说明文本对话框 
      
    </span>
  </button>
  <!--teleport start-->
  <div
    class="t-popup"
  >
    <transition-stub
      appear="false"
      css="true"
      name="fade"
      persisted="false"
    >
      <transition-stub
        appear="false"
        css="true"
        name="t-overlay"
        persisted="true"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
      </transition-stub>
    </transition-stub>
    <transition-stub
      appear="false"
      css="true"
      name="fade-zoom"
      persisted="true"
    >
      <div
        class="t-popup--content t-popup--content-center"
        style="display: none;"
      >
        
        <div
          class="t-dialog"
          id="root"
        >
          <div
            class="t-dialog__header t-dialog__header--has-content"
          >
            
            <div
              class="t-dialog__title"
            >
              最小高度样式，文案上下居中
            </div>
            
          </div>
          <!--v-if-->
          <div
            class="t-dialog__footer"
          >
            
            <!--v-if-->
            
            
            <!--v-if-->
            
            
            <!--v-if-->
            
          </div>
        </div>
        
      </div>
    </transition-stub>
  </div>
  <!--teleport end-->
  <!--teleport start-->
  <div
    class="t-popup"
  >
    <transition-stub
      appear="false"
      css="true"
      name="fade"
      persisted="false"
    >
      <transition-stub
        appear="false"
        css="true"
        name="t-overlay"
        persisted="true"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          
          
        </div>
      </transition-stub>
    </transition-stub>
    <transition-stub
      appear="false"
      css="true"
      name="fade-zoom"
      persisted="true"
    >
      <div
        class="t-popup--content t-popup--content-center"
        style="display: none;"
      >
        
        <div
          class="t-dialog"
          id="root"
        >
          <div
            class="t-dialog__header t-dialog__header--has-content"
          >
            
            <div
              class="t-dialog__title"
            >
              对话框标题
            </div>
            
          </div>
          <div
            class="t-dialog__body"
          >
            <div
              class="t-dialog__text"
            >
              告知当前状态、信息和解决方法
            </div>
          </div>
          <div
            class="t-dialog__vertical-footer t-dialog__footer"
          >
            
            <!--v-if-->
            
            
            <!--v-if-->
            
            
            <!--v-if-->
            
          </div>
        </div>
        
      </div>
    </transition-stub>
  </div>
  <!--teleport end-->
  
</div>
`;

exports[`Dialog > Dialog mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-35efb3bf=""
>
  <h1
    class="title"
    data-v-35efb3bf=""
  >
    Dialog 对话框
  </h1>
  <p
    class="summary"
    data-v-35efb3bf=""
  >
    用于显示重要提示或请求用户进行重要操作，一种打断当前操作的模态视图。
  </p>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-35efb3bf=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        反馈类对话框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="dialog-demo"
        data-v-35efb3bf=""
      >
        
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
             单行标题 
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
             多行标题最大高度 
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
             带说明文本 
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
             带说明文本最大高度 
            
          </span>
        </button>
        <!-- &lt;t-button block variant="outline" size="large" @click="eventDialog()"&gt; 函数调用长文本对话框 &lt;/t-button&gt; -->
        <!--teleport start-->
        <div
          class="t-popup"
        >
          <transition-stub
            appear="false"
            css="true"
            name="fade"
            persisted="false"
          >
            <transition-stub
              appear="false"
              css="true"
              name="t-overlay"
              persisted="true"
            >
              <div
                class="t-overlay"
                style="z-index: 1000; transition-duration: 300ms; display: none;"
              >
                
                
              </div>
            </transition-stub>
          </transition-stub>
          <transition-stub
            appear="false"
            css="true"
            name="fade-zoom"
            persisted="true"
          >
            <div
              class="t-popup--content t-popup--content-center"
              style="display: none;"
            >
              
              <div
                class="t-dialog"
                id="root"
              >
                <div
                  class="t-dialog__header t-dialog__header--has-content"
                >
                  
                  <div
                    class="t-dialog__title"
                  >
                    最小高度样式，文案上下居中
                  </div>
                  
                </div>
                <!--v-if-->
                <div
                  class="t-dialog__footer"
                >
                  
                  <!--v-if-->
                  
                  
                  <!--v-if-->
                  
                  
                  <button
                    aria-disabled="false"
                    class="t-button t-size-m t-button--text t-button--default t-button--shape-rectangle t-dialog__btn t-dialog__btn--primary t-dialog__horizontal-btn"
                    role="button"
                  >
                    <!---->
                    <span
                      class="t-button__text"
                    >
                      知道了
                    </span>
                  </button>
                  
                </div>
              </div>
              
            </div>
          </transition-stub>
        </div>
        <!--teleport end-->
        <!--teleport start-->
        <div
          class="t-popup"
        >
          <transition-stub
            appear="false"
            css="true"
            name="fade"
            persisted="false"
          >
            <transition-stub
              appear="false"
              css="true"
              name="t-overlay"
              persisted="true"
            >
              <div
                class="t-overlay"
                style="z-index: 1000; transition-duration: 300ms; display: none;"
              >
                
                
              </div>
            </transition-stub>
          </transition-stub>
          <transition-stub
            appear="false"
            css="true"
            name="fade-zoom"
            persisted="true"
          >
            <div
              class="t-popup--content t-popup--content-center"
              style="display: none;"
            >
              
              <div
                class="t-dialog"
                id="root"
              >
                <div
                  class="t-dialog__header t-dialog__header--has-content"
                >
                  
                  <div
                    class="t-dialog__title"
                  >
                    告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内
                  </div>
                  
                </div>
                <!--v-if-->
                <div
                  class="t-dialog__footer"
                >
                  
                  <!--v-if-->
                  
                  
                  <!--v-if-->
                  
                  
                  <button
                    aria-disabled="false"
                    class="t-button t-size-m t-button--text t-button--default t-button--shape-rectangle t-dialog__btn t-dialog__btn--primary t-dialog__horizontal-btn"
                    role="button"
                  >
                    <!---->
                    <span
                      class="t-button__text"
                    >
                      知道了
                    </span>
                  </button>
                  
                </div>
              </div>
              
            </div>
          </transition-stub>
        </div>
        <!--teleport end-->
        <!--teleport start-->
        <div
          class="t-popup"
        >
          <transition-stub
            appear="false"
            css="true"
            name="fade"
            persisted="false"
          >
            <transition-stub
              appear="false"
              css="true"
              name="t-overlay"
              persisted="true"
            >
              <div
                class="t-overlay"
                style="z-index: 1000; transition-duration: 300ms; display: none;"
              >
                
                
              </div>
            </transition-stub>
          </transition-stub>
          <transition-stub
            appear="false"
            css="true"
            name="fade-zoom"
            persisted="true"
          >
            <div
              class="t-popup--content t-popup--content-center"
              style="display: none;"
            >
              
              <div
                class="t-dialog"
                id="root"
              >
                <div
                  class="t-dialog__header t-dialog__header--has-content"
                >
                  
                  <div
                    class="t-dialog__title"
                  >
                    对话框标题
                  </div>
                  
                </div>
                <div
                  class="t-dialog__body"
                >
                  <div
                    class="t-dialog__text"
                  >
                    告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内
                  </div>
                </div>
                <div
                  class="t-dialog__footer"
                >
                  
                  <!--v-if-->
                  
                  
                  <!--v-if-->
                  
                  
                  <button
                    aria-disabled="false"
                    class="t-button t-size-m t-button--text t-button--default t-button--shape-rectangle t-dialog__btn t-dialog__btn--primary t-dialog__horizontal-btn"
                    role="button"
                  >
                    <!---->
                    <span
                      class="t-button__text"
                    >
                      知道了
                    </span>
                  </button>
                  
                </div>
              </div>
              
            </div>
          </transition-stub>
        </div>
        <!--teleport end-->
        <!--teleport start-->
        <div
          class="t-popup"
        >
          <transition-stub
            appear="false"
            css="true"
            name="fade"
            persisted="false"
          >
            <transition-stub
              appear="false"
              css="true"
              name="t-overlay"
              persisted="true"
            >
              <div
                class="t-overlay"
                style="z-index: 1000; transition-duration: 300ms; display: none;"
              >
                
                
              </div>
            </transition-stub>
          </transition-stub>
          <transition-stub
            appear="false"
            css="true"
            name="fade-zoom"
            persisted="true"
          >
            <div
              class="t-popup--content t-popup--content-center"
              style="display: none;"
            >
              
              <div
                class="t-dialog"
                id="root"
              >
                <div
                  class="t-dialog__header t-dialog__header--has-content"
                >
                  
                  <div
                    class="t-dialog__title"
                  >
                    对话框标题
                  </div>
                  
                </div>
                <div
                  class="t-dialog__body"
                >
                  <div
                    class="t-dialog__text"
                  >
                    告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内
                  </div>
                </div>
                <div
                  class="t-dialog__footer"
                >
                  
                  <!--v-if-->
                  
                  
                  <!--v-if-->
                  
                  
                  <button
                    aria-disabled="false"
                    class="t-button t-size-m t-button--text t-button--default t-button--shape-rectangle t-dialog__btn t-dialog__btn--primary t-dialog__horizontal-btn"
                    role="button"
                  >
                    <!---->
                    <span
                      class="t-button__text"
                    >
                      知道了
                    </span>
                  </button>
                  
                </div>
              </div>
              
            </div>
          </transition-stub>
        </div>
        <!--teleport end-->
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-35efb3bf=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        确认类对话框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="dialog-demo"
        data-v-35efb3bf=""
      >
        
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
          data-v-25064f1a=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
             双按钮 
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
          data-v-25064f1a=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
             带警示按钮 
            
          </span>
        </button>
        <!--teleport start-->
        <div
          class="t-popup"
        >
          <transition-stub
            appear="false"
            css="true"
            name="fade"
            persisted="false"
          >
            <transition-stub
              appear="false"
              css="true"
              name="t-overlay"
              persisted="true"
            >
              <div
                class="t-overlay"
                style="z-index: 1000; transition-duration: 300ms; display: none;"
              >
                
                
              </div>
            </transition-stub>
          </transition-stub>
          <transition-stub
            appear="false"
            css="true"
            name="fade-zoom"
            persisted="true"
          >
            <div
              class="t-popup--content t-popup--content-center"
              style="display: none;"
            >
              
              <div
                class="t-dialog"
                id="root"
              >
                <div
                  class="t-dialog__header t-dialog__header--has-content"
                >
                  
                  <div
                    class="t-dialog__title"
                  >
                    对话框标题
                  </div>
                  
                </div>
                <div
                  class="t-dialog__body"
                >
                  <div
                    class="t-dialog__text"
                  >
                    告知当前状态、信息和解决方法
                  </div>
                </div>
                <div
                  class="t-dialog__footer"
                >
                  
                  <!--v-if-->
                  
                  
                  <button
                    aria-disabled="false"
                    class="t-button t-size-m t-button--text t-button--default t-button--shape-rectangle t-dialog__btn t-dialog__btn--default t-dialog__horizontal-btn"
                    role="button"
                  >
                    <!---->
                    <span
                      class="t-button__text"
                    >
                      取消
                    </span>
                  </button>
                  
                  
                  <button
                    aria-disabled="false"
                    class="t-button t-size-m t-button--text t-button--default t-button--shape-rectangle t-dialog__btn t-dialog__btn--primary t-dialog__horizontal-btn"
                    role="button"
                  >
                    <!---->
                    <span
                      class="t-button__text"
                    >
                      确认
                    </span>
                  </button>
                  
                </div>
              </div>
              
            </div>
          </transition-stub>
        </div>
        <!--teleport end-->
        <!--teleport start-->
        <div
          class="t-popup"
        >
          <transition-stub
            appear="false"
            css="true"
            name="fade"
            persisted="false"
          >
            <transition-stub
              appear="false"
              css="true"
              name="t-overlay"
              persisted="true"
            >
              <div
                class="t-overlay"
                style="z-index: 1000; transition-duration: 300ms; display: none;"
              >
                
                
              </div>
            </transition-stub>
          </transition-stub>
          <transition-stub
            appear="false"
            css="true"
            name="fade-zoom"
            persisted="true"
          >
            <div
              class="t-popup--content t-popup--content-center"
              style="display: none;"
            >
              
              <div
                class="t-dialog"
                id="root"
              >
                <div
                  class="t-dialog__header t-dialog__header--has-content"
                >
                  
                  <div
                    class="t-dialog__title"
                  >
                    对话框标题
                  </div>
                  
                </div>
                <div
                  class="t-dialog__body"
                >
                  <div
                    class="t-dialog__text"
                  >
                    告知当前状态、信息和解决方法，等内容。描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很告知当前状态、信息和解决方法，等内容。描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很多描述文案很
                  </div>
                </div>
                <div
                  class="t-dialog__footer"
                >
                  
                  <!--v-if-->
                  
                  
                  <button
                    aria-disabled="false"
                    class="t-button t-size-m t-button--text t-button--default t-button--shape-rectangle t-dialog__btn t-dialog__btn--default t-dialog__horizontal-btn"
                    role="button"
                  >
                    <!---->
                    <span
                      class="t-button__text"
                    >
                      取消
                    </span>
                  </button>
                  
                  
                  <button
                    aria-disabled="false"
                    class="t-button t-size-m t-button--text t-button--danger t-button--shape-rectangle t-dialog__btn t-dialog__btn--primary t-dialog__horizontal-btn"
                    role="button"
                  >
                    <!---->
                    <span
                      class="t-button__text"
                    >
                      警示操作
                    </span>
                  </button>
                  
                </div>
              </div>
              
            </div>
          </transition-stub>
        </div>
        <!--teleport end-->
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-35efb3bf=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        输入对话框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="dialog-demo"
        data-v-35efb3bf=""
        style="padding-bottom: 20px;"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
          data-v-4a76bf3d=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
             单行标题对话框 
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
          data-v-4a76bf3d=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
             带说明文本对话框 
            
          </span>
        </button>
        <!--teleport start-->
        <div
          class="t-popup"
        >
          <transition-stub
            appear="false"
            css="true"
            name="fade"
            persisted="false"
          >
            <transition-stub
              appear="false"
              css="true"
              name="t-overlay"
              persisted="true"
            >
              <div
                class="t-overlay"
                style="z-index: 1000; transition-duration: 300ms; display: none;"
              >
                
                
              </div>
            </transition-stub>
          </transition-stub>
          <transition-stub
            appear="false"
            css="true"
            name="fade-zoom"
            persisted="true"
          >
            <div
              class="t-popup--content t-popup--content-center"
              style="display: none;"
            >
              
              <div
                class="t-dialog"
                id="root"
              >
                <div
                  class="t-dialog__header t-dialog__header--has-content"
                >
                  
                  <div
                    class="t-dialog__title"
                  >
                    最小高度样式，文案上下居中
                  </div>
                  
                </div>
                <!--v-if-->
                <div
                  class="t-dialog__footer"
                >
                  
                  <!--v-if-->
                  
                  
                  <!--v-if-->
                  
                  
                  <!--v-if-->
                  
                </div>
              </div>
              
            </div>
          </transition-stub>
        </div>
        <!--teleport end-->
        <!--teleport start-->
        <div
          class="t-popup"
        >
          <transition-stub
            appear="false"
            css="true"
            name="fade"
            persisted="false"
          >
            <transition-stub
              appear="false"
              css="true"
              name="t-overlay"
              persisted="true"
            >
              <div
                class="t-overlay"
                style="z-index: 1000; transition-duration: 300ms; display: none;"
              >
                
                
              </div>
            </transition-stub>
          </transition-stub>
          <transition-stub
            appear="false"
            css="true"
            name="fade-zoom"
            persisted="true"
          >
            <div
              class="t-popup--content t-popup--content-center"
              style="display: none;"
            >
              
              <div
                class="t-dialog"
                id="root"
              >
                <div
                  class="t-dialog__header t-dialog__header--has-content"
                >
                  
                  <div
                    class="t-dialog__title"
                  >
                    对话框标题
                  </div>
                  
                </div>
                <div
                  class="t-dialog__body"
                >
                  <div
                    class="t-dialog__text"
                  >
                    告知当前状态、信息和解决方法
                  </div>
                </div>
                <div
                  class="t-dialog__vertical-footer t-dialog__footer"
                >
                  
                  <!--v-if-->
                  
                  
                  <!--v-if-->
                  
                  
                  <!--v-if-->
                  
                </div>
              </div>
              
            </div>
          </transition-stub>
        </div>
        <!--teleport end-->
        
      </div>
      
    </div>
  </div>
</div>
`;
